c/experimental/stf/include/cccl/c/experimental/stf/stf.h


typedef enum stf_access_mode 
{
  STF_NONE  = 0, 
  STF_READ  = 1 << 0, 
  STF_WRITE = 1 << 1, 
  STF_RW    = STF_READ | STF_WRITE 
} stf_access_mode;
typedef struct stf_exec_place_opaque_t* stf_exec_place_handle;
typedef struct stf_data_place_opaque_t* stf_data_place_handle;
typedef struct stf_green_context_helper_opaque_t* stf_green_context_helper_handle;
typedef struct stf_exec_place_scope_opaque_t* stf_exec_place_scope_handle;
typedef struct stf_exec_place_resources_opaque_t* stf_exec_place_resources_handle;
typedef struct stf_ctx_handle_t* stf_ctx_handle;
typedef struct stf_pos4
{
  int64_t x; 
  int64_t y; 
  int64_t z; 
  int64_t t; 
} stf_pos4;
typedef struct stf_dim4
{
  uint64_t x; 
  uint64_t y; 
  uint64_t z; 
  uint64_t t; 
} stf_dim4;
typedef void (*stf_get_executor_fn)(stf_pos4* result, stf_pos4 data_coords, stf_dim4 data_dims, stf_dim4 grid_dims);
stf_exec_place_handle stf_exec_place_host(void);
stf_exec_place_handle stf_exec_place_device(int dev_id);
stf_exec_place_handle stf_exec_place_current_device(void);
stf_green_context_helper_handle stf_green_context_helper_create(int sm_count, int dev_id);
void stf_green_context_helper_destroy(stf_green_context_helper_handle h);
size_t stf_green_context_helper_get_count(stf_green_context_helper_handle h);
int stf_green_context_helper_get_device_id(stf_green_context_helper_handle h);
stf_exec_place_handle stf_exec_place_clone(stf_exec_place_handle h);
void stf_exec_place_destroy(stf_exec_place_handle h);
int stf_exec_place_is_host(stf_exec_place_handle h);
int stf_exec_place_is_device(stf_exec_place_handle h);
void stf_exec_place_get_dims(stf_exec_place_handle h, stf_dim4* out_dims);
size_t stf_exec_place_size(stf_exec_place_handle h);
void stf_exec_place_set_affine_data_place(stf_exec_place_handle h, stf_data_place_handle affine_dplace);
stf_exec_place_handle stf_exec_place_grid_from_devices(const int* device_ids, size_t count);
stf_exec_place_handle
stf_exec_place_grid_create(const stf_exec_place_handle* places, size_t count, const stf_dim4* grid_dims);
void stf_exec_place_grid_destroy(stf_exec_place_handle grid);
stf_exec_place_scope_handle stf_exec_place_scope_enter(stf_exec_place_handle place, size_t idx);
void stf_exec_place_scope_exit(stf_exec_place_scope_handle scope);
stf_data_place_handle stf_exec_place_get_affine_data_place(stf_exec_place_handle h);
stf_exec_place_resources_handle stf_exec_place_resources_create(void);
void stf_exec_place_resources_destroy(stf_exec_place_resources_handle h);
CUstream stf_exec_place_pick_stream(stf_exec_place_resources_handle res, stf_exec_place_handle h, int for_computation);
stf_exec_place_handle stf_exec_place_get_place(stf_exec_place_handle h, size_t idx);
stf_exec_place_handle
stf_exec_place_green_ctx(stf_green_context_helper_handle helper, size_t idx, int use_green_ctx_data_place);
void stf_machine_init(void);
stf_data_place_handle stf_data_place_host(void);
stf_data_place_handle stf_data_place_device(int dev_id);
stf_data_place_handle stf_data_place_managed(void);
stf_data_place_handle stf_data_place_affine(void);
stf_data_place_handle stf_data_place_current_device(void);
stf_data_place_handle stf_data_place_composite(stf_exec_place_handle grid, stf_get_executor_fn mapper);
stf_data_place_handle stf_data_place_green_ctx(stf_green_context_helper_handle helper, size_t idx);
stf_data_place_handle stf_data_place_clone(stf_data_place_handle h);
void stf_data_place_destroy(stf_data_place_handle h);
int stf_data_place_get_device_ordinal(stf_data_place_handle h);
const char* stf_data_place_to_string(stf_data_place_handle h);
void* stf_data_place_allocate(stf_data_place_handle h, ptrdiff_t size, cudaStream_t stream);
void stf_data_place_deallocate(stf_data_place_handle h, void* ptr, size_t size, cudaStream_t stream);
int stf_data_place_allocation_is_stream_ordered(stf_data_place_handle h);
typedef struct stf_logical_data_handle_t* stf_logical_data_handle;
typedef struct stf_task_handle_t* stf_task_handle;
typedef struct stf_cuda_kernel_handle_t* stf_cuda_kernel_handle;
typedef struct stf_host_launch_handle_t* stf_host_launch_handle;
typedef struct stf_host_launch_deps_handle_t* stf_host_launch_deps_handle;
typedef void (*stf_host_callback_fn)(stf_host_launch_deps_handle deps);
stf_ctx_handle stf_ctx_create(void);
stf_ctx_handle stf_ctx_create_graph(void);
typedef struct stf_async_resources_opaque_t* stf_async_resources_handle;
stf_async_resources_handle stf_async_resources_create(void);
void stf_async_resources_destroy(stf_async_resources_handle h);
typedef enum stf_backend_kind 
{
  STF_BACKEND_STREAM = 0, 
  STF_BACKEND_GRAPH  = 1, 
} stf_backend_kind;
typedef struct stf_ctx_options
{
  stf_backend_kind backend; 
  int has_stream; 
  cudaStream_t stream; 
  stf_async_resources_handle handle; 
} stf_ctx_options;
stf_ctx_handle stf_ctx_create_ex(const stf_ctx_options* opts);
void stf_ctx_finalize(stf_ctx_handle ctx);
stf_exec_place_resources_handle stf_ctx_get_place_resources(stf_ctx_handle ctx);
cudaStream_t stf_fence(stf_ctx_handle ctx);
int stf_ctx_wait(stf_ctx_handle ctx, stf_logical_data_handle ld, void* out, size_t size);
stf_logical_data_handle stf_logical_data(stf_ctx_handle ctx, void* addr, size_t sz);
stf_logical_data_handle
stf_logical_data_with_place(stf_ctx_handle ctx, void* addr, size_t sz, stf_data_place_handle dplace);
void stf_logical_data_set_symbol(stf_logical_data_handle ld, const char* symbol);
void stf_logical_data_destroy(stf_logical_data_handle ld);
stf_logical_data_handle stf_logical_data_empty(stf_ctx_handle ctx, size_t length);
stf_logical_data_handle stf_token(stf_ctx_handle ctx);
stf_task_handle stf_task_create(stf_ctx_handle ctx);
void stf_task_set_exec_place(stf_task_handle t, stf_exec_place_handle exec_p);
void stf_task_set_symbol(stf_task_handle t, const char* symbol);
void stf_task_add_dep(stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m);
void stf_task_add_dep_with_dplace(
  stf_task_handle t, stf_logical_data_handle ld, stf_access_mode m, stf_data_place_handle data_p);
void stf_task_start(stf_task_handle t);
void stf_task_end(stf_task_handle t);
CUstream stf_task_get_custream(stf_task_handle t);
void* stf_task_get(stf_task_handle t, int submitted_index);
void stf_task_destroy(stf_task_handle t);
void stf_task_enable_capture(stf_task_handle t);
int stf_task_get_grid_dims(stf_task_handle t, stf_dim4* out_dims);
int stf_task_get_custream_at_index(stf_task_handle t, size_t place_index, CUstream* out_stream);
stf_cuda_kernel_handle stf_cuda_kernel_create(stf_ctx_handle ctx);
void stf_cuda_kernel_set_exec_place(stf_cuda_kernel_handle k, stf_exec_place_handle exec_p);
void stf_cuda_kernel_set_symbol(stf_cuda_kernel_handle k, const char* symbol);
void stf_cuda_kernel_add_dep(stf_cuda_kernel_handle k, stf_logical_data_handle ld, stf_access_mode m);
void stf_cuda_kernel_start(stf_cuda_kernel_handle k);
void stf_cuda_kernel_add_desc_cufunc(
  stf_cuda_kernel_handle k,
  CUfunction cufunc,
  dim3 grid_dim_,
  dim3 block_dim_,
  size_t shared_mem_,
  int arg_cnt,
  const void** args);
void stf_cuda_kernel_end(stf_cuda_kernel_handle k);
void stf_cuda_kernel_destroy(stf_cuda_kernel_handle k);
stf_host_launch_handle stf_host_launch_create(stf_ctx_handle ctx);
void stf_host_launch_add_dep(stf_host_launch_handle h, stf_logical_data_handle ld, stf_access_mode m);
void stf_host_launch_set_symbol(stf_host_launch_handle h, const char* symbol);
void stf_host_launch_set_user_data(stf_host_launch_handle h, const void* data, size_t size, void (*dtor)(void*));
void stf_host_launch_submit(stf_host_launch_handle h, stf_host_callback_fn callback);
void stf_host_launch_destroy(stf_host_launch_handle h);
void* stf_host_launch_deps_get(stf_host_launch_deps_handle deps, size_t index);
size_t stf_host_launch_deps_get_size(stf_host_launch_deps_handle deps, size_t index);
size_t stf_host_launch_deps_size(stf_host_launch_deps_handle deps);
void* stf_host_launch_deps_get_user_data(stf_host_launch_deps_handle deps);
stf_ctx_handle stf_stackable_ctx_create(void);
void stf_stackable_ctx_finalize(stf_ctx_handle ctx);
cudaStream_t stf_stackable_ctx_fence(stf_ctx_handle ctx);
void stf_stackable_push_graph(stf_ctx_handle ctx);
void stf_stackable_pop(stf_ctx_handle ctx);